# sedp

UE1/montecarlopi/: montecarlopi.cpp  montecarlopi.txt
UE1/palindromeChecker/: main.cpp  palindrome-checker.cpp  palindrome_mini.txt
UE1/syntacticSugar/: syntax.cpp
UE2/graph/: Graph.cpp  Graph.h  GraphFactory.cpp  GraphFactory.h  InstanceCounter.cpp  graph-test.cpp
UE2/particles/: CMakeLists.txt  build.sh  particle.cpp  particle.h
UE2/regex-filter/: regex-filter.cpp  test.sh
UE2/runner/: build.sh  errors.txt  runner.cpp
UE3/: CMakeLists.txt
UE3/integration/: integration.cpp
UE3/modcounter/: modcounter.cpp  modcounter.h  test.cpp
UE3/token_iterator/: token_iterator.cpp
UE4/: CMakeLists.txt
UE4/beziercurve/: CubicBezierCurve.h  CubicBezierCurver.cpp  Point.cpp  Point.h  c1.txt  c2.txt  test.cpp
UE4/dice/: dice.cpp  dice.h  game.cpp  game.h  mud-main.cpp  player.cpp  player.h  seven-main.cpp
UE4/graph/: Graph.h  Group.cpp  Group.h  Leaf.cpp  Leaf.h  Node.cpp  Node.h  Proxy.cpp  Proxy.h  main.cpp
UE4/transactions/: Decorator.cpp  Decorator.h  LoggedDecorator.cpp  LoggedDecorator.h  LoggedSecureTransaction.cpp  LoggedSecureTransaction.h  LoggedSecuredTransaction.cpp  LoggedSecuredTransaction.h  LoggedTransaction.cpp  LoggedTransaction.h  SecuredDecorator.cpp  SecuredDecorator.h  SecuredTransaction.cpp  SecuredTransaction.h  Transaction.cpp  Transaction.h  main.cpp
UE5/: CMakeLists.txt
UE5/collect/: collect.h  main.cpp
UE5/signal/: Signal.h  main.cpp
UE5/template-refactoring/: main.cpp
UE5/variant/: Variant.cpp  Variant.h  main.cpp
